# learning-rust

./: .env  Dockerfile  docker-compose.yml  env
app/: .env  Cargo.toml
app/src/: main.rs
docker/: env.tmpl
